--- a/patient_doctor_notes.ipynb
+++ b/patient_doctor_notes.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdmoqXfapVRSpfMVFNO9yC",
+      "authorship_tag": "ABX9TyO+a/PieRcI+8yoCwKWlnpz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,45 +28,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "Nx7YzZm-blTO",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5834c859-1924-4052-f600-af1500218726"
+        "outputId": "f41cd182-ceab-4cd0-cb4a-981cef592839"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "SOAP Note:\n",
+            "**SOAP Note**\n",
             "\n",
-            "Subjective (S):\n",
-            "- Chief Complaint: Patient reports experiencing asthma attacks and \"pins and needles\" sensations in the chest, arms, and hands.\n",
-            "- History of Present Illness: The patient describes current symptoms of chest congestion, persistent coughing, and unusual sensations when coughing. The patient mentions that their family members have also been ill with chest congestion and frequent coughing. The patient expresses concern regarding whether they should simply stay comfortable and endure the sensations or seek medical evaluation.\n",
-            "- Relevant Past Medical History: The patient reports having had two heart stents placed within the past 11 months. The patient noted that they have not experienced asthma attacks for a few years until now.\n",
-            "- Social Context: The patient ended the conversation prematurely due to concerns about associated fees.\n",
+            "**Subjective (S):**\n",
+            "- The patient reports experiencing asthma attacks and \"pins and needles\" sensations in the chest, arms, and hands.\n",
+            "- The patient states that their family has been ill with chest congestion, and all have been coughing a lot.\n",
+            "- The patient has had two heart stents placed within the last 11 months.\n",
+            "- The patient mentions not having had asthma attacks for a few years.\n",
+            "- The patient is unsure whether to attempt to stay comfortable and endure the sensations when coughing, or to seek medical attention.\n",
             "\n",
-            "Objective (O):\n",
-            "- Not documented in transcript. No vital signs, physical exam findings, or diagnostic test results provided.\n",
+            "**Objective (O):**\n",
+            "Not documented in transcript.\n",
             "\n",
-            "Assessment (A):\n",
-            "- Possible recurrent asthma exacerbation, given the reported asthma attacks after a symptom-free period.\n",
-            "- Paresthesia (pins and needles sensation) could be related to recent cardiac procedures (stent placement), nerve irritation, or referred pain from respiratory distress.\n",
-            "- Potential upper respiratory infection or bronchitis in both the patient and family, given the reported chest congestion and coughing.\n",
-            "- Differential diagnosis includes chest congestion due to an infectious etiology, cardiac-related complications due to recent stenting, or anxiety-related sensations.\n",
+            "**Assessment (A):**\n",
+            "- Possible nerve irritation post-stent placement.\n",
+            "- Asthma exacerbation may be contributing to symptoms.\n",
+            "- Chest congestion and cough, likely due to viral or infectious etiology as the family is similarly affected.\n",
             "\n",
-            "Plan (P):\n",
-            "- The patient should be advised to seek immediate medical evaluation due to the recent cardiac interventions and the combination of respiratory symptoms and paresthesia. The risk of cardiovascular complications must be ruled out.\n",
-            "- Consider spirometry or pulmonary function tests to assess asthma control and severity.\n",
-            "- Possible chest X-ray or ECG to evaluate for cardiac or pulmonary complications.\n",
-            "- If infectious etiology suspected, consider appropriate testing (e.g., viral panel, sputum culture).\n",
-            "- Educate the patient about the importance of timely follow-up, especially given cardiac history.\n",
-            "- Follow-up with a primary care provider and/or cardiologist and pulmonologist as necessary.\n",
-            "- Assess need for medications such as bronchodilators or corticosteroids, pending evaluation.\n",
-            "\n"
+            "**Plan (P):**\n",
+            "- Reassurance was provided that some nerve disturbance could occur following stent placement.\n",
+            "- No urgent concerns were expressed by the clinician during the discussion.\n",
+            "- The patient was considering self-care but ultimately did not proceed with further evaluation, citing a fee. No specific treatments, tests, or follow-up instructions were documented.\n"
           ]
         }
       ],
@@ -98,13 +93,27 @@
         "\n",
         "PROMPT = \"\"\"\n",
         "You are a medical note generator.\n",
-        "Generate a detailed and structured SOAP note based on the provided medical conversation transcript. Organize the information into these clearly labeled sections:\n",
-        "Subjective (S): Summarize all patient-reported symptoms, chief complaints, relevant medical history, and subjective experiences described during the encounter. Ensure this section accurately reflects only the patient's perspective as conveyed in the transcript.\n",
-        "Objective (O): Include all measurable and observable clinical data explicitly mentioned in the transcript, such as vital signs, physical examination findings, laboratory results, and imaging reports. If specific objective data is not documented in the transcript, state 'Not documented in transcript' for that data point or section.\n",
-        "Assessment (A): Provide the clinical diagnosis or differential diagnoses discussed or indicated based on the subjective and objective information extracted solely from the transcript.\n",
-        "Plan (P): Outline the recommended treatment plan, including medications prescribed, therapies suggested, referrals made, diagnostic tests ordered, patient education provided, and follow-up instructions, as discussed within the transcript.\n",
         "\n",
-        "Use professional, concise medical language suitable for clinical documentation. Exclude any irrelevant, redundant, or external information not present in the transcript. Maintain patient confidentiality in the note by using de-identified information and focusing strictly on the medical content of the conversation.\n",
+        "Audio Speakers:\n",
+        "- First audio file = Patient\n",
+        "- Second audio file = Doctor/Clinician\n",
+        "\n",
+        "Generate a detailed and structured SOAP note based on the provided medical conversation.\n",
+        "\n",
+        "Subjective (S):\n",
+        "Summarize patient-reported symptoms, chief complaints, medical history, and subjective experiences. Only include patient perspective.\n",
+        "\n",
+        "Objective (O):\n",
+        "Include measurable and observable clinical findings mentioned by the doctor (vitals, exam findings, labs, imaging). If not stated, write “Not documented in transcript.”\n",
+        "\n",
+        "Assessment (A):\n",
+        "Provide the clinical diagnosis or differential based solely on the transcript.\n",
+        "\n",
+        "Plan (P):\n",
+        "Outline treatments, medications, tests ordered, referrals, counseling, and follow-up instructions mentioned.\n",
+        "\n",
+        "Use concise, professional clinical language. Do not invent information. De-identify the note and use only transcript content.\n",
+        "\n",
         "\"\"\"\n",
         "\n",
         "completion = client.chat.completions.create(\n",
